--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "git@github.com:denysdovhan/robbyrussell.git",
   "author": "Denys Dovhan <email@denysdovhan.com>",
   "license": "MIT",
+  "scripts": {
+    "install": "./install.js",
+    "uninstall": "./uninstall.js"
+  },
   "dependencies": {
     "chalk": "^1.1.3",
     "git-state": "^3.1.0"
