--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
   "license": "MIT",
   "scripts": {
     "install": "./install.js",
-    "uninstall": "./uninstall.js"
+    "uninstall": "./uninstall.js",
+    "test": "tape tests.js | tap-spec"
   },
   "dependencies": {
     "chalk": "^1.1.3",
     "git-state": "^3.1.0"
+  },
+  "devDependencies": {
+    "has-ansi": "^2.0.0",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.3"
   }
 }
