--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
-    "git-state": "^3.1.0"
+    "deep-assign": "^2.0.0",
+    "git-state": "^3.1.0",
+    "pify": "^2.3.0"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
     "has-ansi": "^2.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
